Title tags in prefs aligned, fix #245

--- a/style/less/layout/preferences/prefs_title.less
+++ b/style/less/layout/preferences/prefs_title.less
@@ -3,6 +3,7 @@
 	text-align: left;
 	padding: 8px;
 	pre {
+		font-family: @APL_FONT;
 		overflow: auto;
 		position: absolute;
 		left: 8px;
